<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Pantone"
    tools:context=".ui.TwoPlayerGameActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/scoreboard"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playerOneTextViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/player_1_0"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/playerTwoTextViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/player_2_0"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <!--    <View-->
    <!--        android:layout_width="6dp"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:background="@color/white"-->
    <!--        android:elevation="3dp"-->
    <!--        app:layout_constraintHeight_percent=".5"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/btn11"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <!--    </View>-->

    <!--    <View-->
    <!--        android:layout_width="6dp"-->
    <!--        android:layout_height="0dp"-->
    <!--        app:layout_constraintHeight_percent=".5"-->
    <!--        android:background="@color/white"-->
    <!--        android:elevation="3dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/btn01"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <!--    </View>-->

    <ImageView
        android:id="@+id/btn00"
        android:background="@drawable/image_border"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn01"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <ImageView
        android:id="@+id/btn01"
        android:background="@drawable/image_border"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998" />

    <ImageView
        android:id="@+id/btn02"
        android:background="@drawable/image_border"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn01"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <ImageView
        android:id="@+id/btn11"
        android:background="@drawable/image_border"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn01" />

    <ImageView
        android:id="@+id/btn12"
        android:background="@drawable/image_border"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toEndOf="@+id/btn11"
        app:layout_constraintTop_toBottomOf="@+id/btn02" />

    <!--    <View-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="6dp"-->
    <!--        android:layout_marginStart="20dp"-->
    <!--        android:layout_marginEnd="20dp"-->
    <!--        android:background="@color/white"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/btn11"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/btn00">-->

    <!--    </View>-->

    <ImageView
        android:id="@+id/btn10"
        android:background="@drawable/image_border"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toStartOf="@+id/btn11"
        app:layout_constraintTop_toBottomOf="@+id/btn00" />

    <ImageView
        android:id="@+id/btn21"
        android:background="@drawable/image_border"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn11" />

    <ImageView
        android:id="@+id/btn22"
        android:background="@drawable/image_border"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toEndOf="@+id/btn21"
        app:layout_constraintTop_toBottomOf="@+id/btn12" />

    <ImageView
        android:id="@+id/btn20"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/image_border"
        app:layout_constraintEnd_toStartOf="@+id/btn21"
        app:layout_constraintTop_toBottomOf="@+id/btn10" />

    <!--    <View-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="6dp"-->
    <!--        android:layout_marginStart="20dp"-->
    <!--        android:layout_marginEnd="20dp"-->
    <!--        android:background="@color/white"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/btn22"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/btn12" />-->

    <Button
        android:id="@+id/resetButtonId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn21"
        app:layout_constraintWidth_percent=".6" />




</androidx.constraintlayout.widget.ConstraintLayout>